--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "redux-riot-router",
   "version": "1.0.1",
-  "description": "Redux Middleware for RiotJS Router",
-  "main": "dist/index.js",
+  "description": "Redux Middleware for RiotJS Router in ES6",
+  "main": "modules/index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive",
-    "build": "webpack"
+    "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "repository": {
     "type": "git",
@@ -25,16 +24,16 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "redux": "^3.7.2"
-  },
-  "dependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
+  },
+  "dependencies": {
+    "redux": "^3.7.2",
     "redux-action-reducer": "^1.2.0",
-    "riot-route": "^3.1.2",
-    "webpack": "^3.8.1"
+    "riot-route": "^3.1.2"
   }
 }
