--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riot-redux-router",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "RiotJS Router + Redux Middleware",
   "main": "src/index.js",
   "scripts": {
@@ -27,6 +27,6 @@
   },
   "dependencies": {
     "redux": "^3.7.2",
-    "riot": "^2.6.8"
+    "riot-route": "^3.1.2"
   }
 }
